--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.TipCalculator" parent="android:Theme.Material.Light.DarkActionBar" />
+    <style name="Theme.TipCalculator" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="colorPrimary" type="color">@color/md_theme_dark_primary</item>
+        <item name="colorOnPrimary" type="color">@color/md_theme_dark_onPrimary</item>
+        <item name="colorPrimaryContainer" type="color">@color/md_theme_dark_primaryContainer</item>
+    </style>
 </resources>
